objects/NCS_Data_Entry_Staging__c.object
<CustomObject>
    <description>Staging object for transforming Captricity data into Account, Contact, NCS Application, Inclusion Details, Relationship records.</description>
    <fields>
        <fullName>AP_Source__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;), &quot; &quot;, &quot;Paper form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_received__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;), NULL, DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_info_of_Asthma__c</fullName>
        <label>Additional info of Asthma</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_of_Social_Key_Worker__c</fullName>
        <label>Address of Social/Key Worker</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agree_to_main_consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to main consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_head_injuries__c</fullName>
        <label>Any head injuries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_infectious_dieseases__c</fullName>
        <label>Any infectious dieseases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_other_behavioural_medical_info__c</fullName>
        <label>Any other behavioural/medical info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_prescribed_medication__c</fullName>
        <label>Any prescribed medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_the_legal_guardian__c</fullName>
        <label>Are you the legal guardian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am the legal guardian</fullName>
                </value>
                <value>
                    <fullName>I am not the legal guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_the_legal_guardian_formula__c</fullName>
        <formula>IF( ISPICKVAL( Are_you_the_legal_guardian__c , &quot;I am the legal guardian&quot;) , &quot;Yes&quot;, IF( ISPICKVAL( Are_you_the_legal_guardian__c , &quot;I am not the legal guardian&quot;) , &quot;No&quot;, &quot; &quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are you the legal guardian formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bladder_or_urinary_problems__c</fullName>
        <label>Bladder or urinary problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Status__c</fullName>
        <label>NCST:Call Center Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Can_the_YP_swim_50m_light_clothing__c</fullName>
        <label>Can the YP swim 50m (light clothing)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <label>City/Town</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_method_preference_formula__c</fullName>
        <formula>IF( Communication_method_prefers_post__c = TRUE, &quot;Please post any further information&quot;, &quot;Please email any further information&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication method preference formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_method_prefers_post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication method: prefers post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>NCST:Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Criminal_Justice_engagement__c</fullName>
        <label>Criminal Justice engagement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Criminal Record</fullName>
                </value>
                <value>
                    <fullName>Police Caution</fullName>
                </value>
                <value>
                    <fullName>Other criminal justice system contact</fullName>
                </value>
                <value>
                    <fullName>Been in custody</fullName>
                </value>
                <value>
                    <fullName>Supported by Youth Offending Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_MASI_form_started__c</fullName>
        <formula>TODAY()</formula>
        <label>Date MASI form started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_choice_Wave_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date choice: Wave 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_choice_Wave_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date choice: Wave 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_choice_Wave_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date choice: Wave 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_injury_s__c</fullName>
        <label>Details of injury(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_personal_care_night_support__c</fullName>
        <label>Details of personal care/night support</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_prescribed_medications__c</fullName>
        <label>Details of prescribed medications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_stomach_digestive_abdominal__c</fullName>
        <label>Details of stomach/digestive/abdominal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_special_dietary_requirements__c</fullName>
        <label>Details special dietary requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diabetes_Self_Managed__c</fullName>
        <label>Diabetes Self Managed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_type__c</fullName>
        <label>Diabetes type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty_adhering_to_rules_boundaries__c</fullName>
        <label>Difficulty adhering to rules/boundaries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_have_Asthma__c</fullName>
        <label>Does the YP have Asthma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_have_diabetes__c</fullName>
        <label>Does the YP have diabetes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_YP_use_an_inhaler__c</fullName>
        <label>Does the YP use an inhaler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dr_treatment_an_ongoing_condition__c</fullName>
        <label>Dr treatment an ongoing condition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dr_treatment_fully_recovered__c</fullName>
        <label>Dr treatment fully recovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_disorder__c</fullName>
        <label>Eating disorder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EduBase_School__c</fullName>
        <label>NCST:EduBase School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Epi_pen_for_Non_food_allergy__c</fullName>
        <label>Epi pen for Non-food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epi_pen_for_food_allergy__c</fullName>
        <label>Epi pen for food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <inlineHelpText>If there was an error processing the staging record then they will display here.</inlineHelpText>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White British</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Traveller of Irish heritage</fullName>
                </value>
                <value>
                    <fullName>Gypsy/ Roma</fullName>
                </value>
                <value>
                    <fullName>Any other White background</fullName>
                </value>
                <value>
                    <fullName>White and Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>White and Black African</fullName>
                </value>
                <value>
                    <fullName>White and Asian</fullName>
                </value>
                <value>
                    <fullName>Any other Mixed background</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Any other Asian background</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Any other Black background</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Any other ethnic group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faith_Religion__c</fullName>
        <label>Faith/Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Assistance_fee_reduction_formula__c</fullName>
        <formula>IF( Finance_Assistance_fee_reduction_request__c = TRUE,  DATEVALUE( CreatedDate ) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Assistance/fee reduction formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Assistance_fee_reduction_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Assistance/fee reduction request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_allergies__c</fullName>
        <label>Food allergies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Eggs</fullName>
                </value>
                <value>
                    <fullName>Fish or Shellfish</fullName>
                </value>
                <value>
                    <fullName>Nuts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_allergies_other__c</fullName>
        <label>Food allergies other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Force_out_of_to_resolve_view__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box when you want to remove a record from the &quot;AP errors to resolve&quot; view</inlineHelpText>
        <label>Force out of &apos;to resolve&apos; view?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_School_Meals__c</fullName>
        <label>Free School Meals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fridge_for_Diabetes_Medication__c</fullName>
        <label>Fridge for Diabetes Medication?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Payment_Received__c</fullName>
        <label>NCST:Full Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Further_details_of_Drs_treatment__c</fullName>
        <label>Further details of Drs treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Further_info_on_legal_guardian__c</fullName>
        <label>Further info on legal guardian</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_Address__c</fullName>
        <label>GP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_Name__c</fullName>
        <label>GP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_Postcode__c</fullName>
        <label>GP Postcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Telephone__c</fullName>
        <label>GP Telephone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GP_full_address__c</fullName>
        <formula>GP_Address__c &amp; &quot;, &quot; &amp; GP_Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP full address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_identity_same_as_biological_sex__c</fullName>
        <label>Gender identity same as biological sex?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_the_young_person_ever_self_harmed__c</fullName>
        <label>Has the young person ever self harmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_impairment__c</fullName>
        <label>Hearing impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heart_blood_problems__c</fullName>
        <label>Heart/blood problems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Angina</fullName>
                </value>
                <value>
                    <fullName>Heart Trouble</fullName>
                </value>
                <value>
                    <fullName>Raised blood pressure</fullName>
                </value>
                <value>
                    <fullName>Other Heart condition</fullName>
                </value>
                <value>
                    <fullName>High or low blood pressure</fullName>
                </value>
                <value>
                    <fullName>Hole in heart</fullName>
                </value>
                <value>
                    <fullName>Heart murmur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Seizures__c</fullName>
        <label>History of Seizures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Fainting Attacks</fullName>
                </value>
                <value>
                    <fullName>Seizures or fits</fullName>
                </value>
                <value>
                    <fullName>BlackOuts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_epilepsy__c</fullName>
        <label>History of epilepsy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_fainting_attacks__c</fullName>
        <label>History of fainting attacks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_self_harm__c</fullName>
        <label>History of self harm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Recent (occurred within the last year)</fullName>
                </value>
                <value>
                    <fullName>Occurred more than one year ago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_substance_abuse__c</fullName>
        <label>History of substance abuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>I_will_pay_later__c</fullName>
        <formula>IF(
    ISPICKVAL(
        Payment_method_preference__c,
        &quot;I will pay later&quot;
    ),

    &quot;Pay online later&quot;,

    NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I will pay later</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Source__c</fullName>
        <label>Initial Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School paper form (Marketing)</fullName>
                </value>
                <value>
                    <fullName>School offline form (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Brought into office by hand (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Received by post (CO)</fullName>
                </value>
                <value>
                    <fullName>Provided over telephone</fullName>
                </value>
                <value>
                    <fullName>Provided over email</fullName>
                </value>
                <value>
                    <fullName>Provided by text message</fullName>
                </value>
                <value>
                    <fullName>Provided through Facebook</fullName>
                </value>
                <value>
                    <fullName>Partner referral</fullName>
                </value>
                <value>
                    <fullName>Staff referral</fullName>
                </value>
                <value>
                    <fullName>Telephone call</fullName>
                </value>
                <value>
                    <fullName>Text message</fullName>
                </value>
                <value>
                    <fullName>Came to an event</fullName>
                </value>
                <value>
                    <fullName>Completed website form</fullName>
                </value>
                <value>
                    <fullName>Contacted us via social media</fullName>
                </value>
                <value>
                    <fullName>Emailed us</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NCS Website Submission</fullName>
                </value>
                <value>
                    <fullName>Radio Ad</fullName>
                </value>
                <value>
                    <fullName>Summer 2012 applicant</fullName>
                </value>
                <value>
                    <fullName>Central web</fullName>
                </value>
                <value>
                    <fullName>Central FB</fullName>
                </value>
                <value>
                    <fullName>CS Upload (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Bucks &amp; Berks handover</fullName>
                </value>
                <value>
                    <fullName>Website - Non-Social Media</fullName>
                </value>
                <value>
                    <fullName>Website - YPOJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Injury_ongoing_weakness_risk__c</fullName>
        <label>Injury ongoing weakness/risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_YP_pregnant__c</fullName>
        <label>Is the YP pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No / does not apply</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Yes, confirmed pregnancy</fullName>
                </value>
                <value>
                    <fullName>Suspected pregnancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_injury_fully_healed__c</fullName>
        <label>Is the injury fully healed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Fully recovered</fullName>
                </value>
                <value>
                    <fullName>Ongoing with no daily support</fullName>
                </value>
                <value>
                    <fullName>Ongoing with daily support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_English__c</fullName>
        <label>Level of English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Speaks fluent English</fullName>
                </value>
                <value>
                    <fullName>Speaks and understands English to a good level</fullName>
                </value>
                <value>
                    <fullName>Speaks and understands English to a basic level</fullName>
                </value>
                <value>
                    <fullName>Young person does not speak English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MASI_Source__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;), &quot; &quot; , &quot;Paper&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MASI Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_information_received_date__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;), NULL,  TODAY()  )</formula>
        <label>Medical information received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medicines__c</fullName>
        <label>Medicines</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>